[package]
name = "hash-db-impl-vsdb"
version = "0.1.0"
edition = "2021"
keywords = ["mpt", "trie", "database", "blockchian"]
license = "MIT"
authors = ["hui.fan@mail.ru"]
description = "An implementation of the `HashDB` trait"
homepage = "https://github.com/rust-util-collections/hash-db-impl-vsdb"
repository = "https://github.com/rust-util-collections/hash-db-impl-vsdb"

[dependencies]
sp-trie = "19.0.0"
sp-trie-db = { package = "trie-db", version = "0.26.0" }
hash-db = "0.15.2"
keccak-hasher = "0.15.3"

bcs = "0.1.5"
serde = { version = "1.0", features = ["derive"] }

ruc = "4.1.0"
vsdb = "0.51.1"
